--- a/public/css/dashboards/dentist.css
+++ b/public/css/dashboards/dentist.css
@@ -255,7 +255,7 @@ body {
 }
 
 .pagination .page-item.active .page-link {
-    background-color: #4f46e5;
+    background-color: #a3d3f5;
     color: #fff;
 }
 
